fix: batched n-ary SU/SD scrolling; capacity-boundary double-scroll fix
Terminal scrolling moves behind the buffer API. TerminalLineShifter
gains floor/ceiling clip bounds and is total for any input: rows pushed
past an edge are discarded (scrolled off), never an out-of-bounds
access. TerminalBufferScrolling gains n-ary shiftUp(n)/shiftDown(n)
implementing SU/SD semantics: a batched scrollback window-growth phase
(one lrd/lrdMax update and one dirty mark instead of one per row)
followed by a single physical whole-buffer shift at capacity. CH8/CH9
(CSI S/T) become single calls and no longer reach into
lastRowToDisplay/SCROLL_BACK_COUNT directly; shiftUpOne() stays a pure
one-row physical shift for IND/NEL, whose caller-owned
incrementLastLineToDisplay() provides the window slide.

Fixes a real bug found while reworking: the old CH8 loop ran an
unconditional shiftUpOne() after the conditional
incrementLastLineToDisplay(), so the iteration crossing the absolute
capacity boundary performed BOTH a window slide and a physical shift —
n+1 visual scrolls for n requested, discarding one extra scrollback
line. The boundary now grows to capacity exactly; pinned end-to-end
through the CSI parser by a test that fails on the old loop.

The previous shiftUp(count)/shiftDown(count) algebra was only exact for
count == 1 (the only count ever passed): at absolute capacity count >= 2
produced a negative copy destination (AIOOBE), and with partial margins
wrote outside the scroll region. The clip-discard primitive makes the
n-ary API safe for any caller. Existing count=1 behavior is
byte-identical; IL/DL/IND/NEL/RI are unchanged.

Verification: property matrices (5 margin configs x 7 window states x 7
counts, batched vs corrected per-row oracle, comparing chars, styles,
both color arrays, lrd/lrdMax and cursor; plus an alt-buffer matrix),
the CSI-level boundary regression test, and targeted edge tests
(capacity discard, tail blankness, region containment, degenerate
regions). Full suite